--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
 title: Art by Ann
-email: your-email@domain.com
+email: dreaqu@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Selections of original artwork by a tinkerer of all sorts.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://dreaqu.github.io" # the base hostname & protocol for your site
 twitter_username:
@@ -13,3 +11,16 @@ github_username:
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+plugins:
+  - jekyll-assets
+
+assets:
+  compress:
+    css: sass
+    js: uglifier
+
+  cache: false
+
+  autoprefixer:
+    browsers: ["last 2 versions","> 5%","IE 9"]
