--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ url: "http://dreaqu.github.io" # the base hostname & protocol for your site
 twitter_username:
 github_username:
 
+exclude:
+  - "*.gemspec"
+  - "Gemfile*"
+  - "resources/*"
+  - "README.md"
 # Build settings
 markdown: kramdown
 #permalink: pretty
